Clean up translation

--- a/src/i18n/i18n_module_km.properties
+++ b/src/i18n/i18n_module_km.properties
@@ -1,54 +1,47 @@
-intro_data_element=Create, modify, view and delete data elements. Data elements are phenomena for which will be captured and analysed.
-intro_category_option=Create, modify, view and delete data element category options. Category Option are fine-grained break-downs of catagory.
-intro_category=Create, modify, view and delete data element categories. Categories are fine-grained break-downs of data elements.
-category_combo=Category Combination
-confirm_delete_indicator=Do you want to delete indicator?
-adding_indicator_failed=Adding indicator failed
-saving_indicator_failed=Saving indicator failed
+#User management
+user_management=User Management
 
-# Organisation Units
-the_selected_organisation_unit_will_be_moved_to_root=The selected organisation unit will be moved to root
+#Context Menu
+details=Show details
+assignToOrgUnits=Assign to organisation units
+assignToOrgUnitsOutput = Assign to organization unit output
+assignRoles=Assign roles
+assignGroups=Assign to groups
+edit=Edit
 
-# Data admin
-data_element_does_not_exist=Data element does not exist
-category_option_combo_does_not_exist=Category option combo does not exist
-org_unit_group_does_not_exist=Org unit group does not exist
-done=done
-sqlquery_is_invalid=This SQL statement is invalid.
-sql_view_instance_invalid=This resource viewer is invalid or does not exist.
-sqlquery_is_not_allowed=Not allowance to query in the special tables!
-loading=Loading
+#Table columns & Details box
+name=Name
+username=Username
+created=Created
+last_updated=Last updated
+user_roles=Roles
+user_groups=Groups
+organisation_units=OU Data Capture
+organisation_units_output=OU Output
+href=Api URL
+actions=Actions
+id=Id
 
-# Data quality
-group_members=Group Members
-right_brackets=Right brackets
-divide=Divide
-plus=Plus
-minus=Minus
-specify_name=Please specify a name
-specify_a_start_date=Please specify a start date
-specify_an_ending_date=Please specify an ending date
-end_date_cannot_be_before_start_date=End date can not be before start date
-confirm_delete_validation_rule=Are you sure you want to delete the validation rule?
-confirm_delete_validation_rule_group=Are you sure you want to delete the validation rule group?
-edit_left_side=Edit left side
-edit_right_side=Edit right side
-select_operator=Select operator
-left=Left
-right=Right
-textual_expression_description=Textual expression description
-edit_validation_rule=Edit validation rule
-validation_rule=Validation Rule
-run_validation=Run validation
-validation_alerts=Validation alerts
-value=Value
-data_element=Data element
-organisation_unit=Organisation unit
-period=Period
-source=Source
-done=Done
-validation_rule_group=Validation Rule Group
-alert_by_org_units=Only organisation unit related users are alerted
-all_validation_rules=All validation rules
-validation_passed_successfully=Validation passed successfully
+#User Management Controls
+role=Role
+group=Group
+search=Search
+filter_by=Filter by
 display_only_users_can_manage=Display only users I can manage
+
+#Assign Dialog
+select=Select
+deselect=Deselect
+select_all=Select all
+deselect_all=Deselect all
+save=SAVE
+cancel=CANCEL
+organisation_unit_assignment_saved=Organisation unit assignment saved
+organisation_unit_assignment_save_error=Failed to save organisation unit assignment
+ok=Ok!
+dismiss=Dismiss
+of_page=of
+org_unit_assignment=Organisation unit assignment
+filter_organisation_units_by_name=Filtering organisation units by name
+organisation_unit_group=Organisation Unit Group
+organisation_units_selected=Organisation units selected
